--- a/ProvaDeConceito-1/src/main/resources/templates/login.html
+++ b/ProvaDeConceito-1/src/main/resources/templates/login.html
@@ -51,8 +51,8 @@
 					<form th:action="@{/login}" method="POST">
 						
 						<div class="form-group">
-							<label>Username:</label> <input type="text" id="username" name="username"
-								class="form-control" placeholder="E-mail">
+							<label>Nome do usuário:</label> <input type="text" id="username" name="username"
+								class="form-control" placeholder="Seu nome de usuário">
 						</div>
 						<div class="form-group">
 							<label>Senha:</label> <input type="password" id="password"
