--- a/ProvaDeConceito-1/src/main/resources/templates/cadastroRepublica.html
+++ b/ProvaDeConceito-1/src/main/resources/templates/cadastroRepublica.html
@@ -44,6 +44,10 @@
                             <input type="text" th:field="*{nome}" class="form-control" placeholder="Nome da república">
                         </div>
                         <div class="form-group" >
+                            <label>Endereço</label>
+                            <input type="text" th:field="*{endereco}" class="form-control" placeholder="Endereço">
+                        </div>
+                        <div class="form-group" >
                             <label>Endereço de e-mail</label>
                             <input type="email" th:field="*{email}" class="form-control" placeholder="Endereço de e-mail">
                         </div>
